# ferobot

./: .buildinfo  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  api.json  changelog.html  contributing.html  fluent.html  framework.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js  spec_commit
.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  fluent.doctree  framework.doctree  getting-started.doctree  index.doctree
.doctrees/reference/: index.doctree  methods.doctree  types.doctree
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/scripts/: build_pr_body.py  coverage_report.py  diff_spec.py  hand_crafted_types.py  update_changelog.py  validate_generated.py
.github/workflows/: auto-regenerate.yml  ci.yml  deploy-docs.yml  notify.yml  release.yml  review-gate.yml
_sources/: changelog.rst.txt  contributing.rst.txt  framework.rst.txt  getting-started.rst.txt  index.rst.txt
_sources/reference/: methods.rst.txt  types.rst.txt
_static/: custom.css
codegen/: Cargo.toml  codegen.py
codegen/src/: main.rs
docs/: changelog.rst  conf.py  contributing.rst  fluent.rst  framework.rst  getting-started.rst  index.rst
docs/_static/: custom.css
examples/command_bot/: Cargo.toml
examples/command_bot/src/: main.rs
ferobot/: Cargo.toml  README.md
reference/: index.html  methods.html  types.html
scripts/: generate_docs.py  generate_rst.py
(+51 files in other folders)
