[package]
name = "command_bot"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "command_bot"
path = "src/main.rs"

[dependencies]
ferobot  = { path = "../../ferobot" }
tokio    = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
